sectionタグをdivに変更

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <main>
-    <section class="profile">
+    <div class="profile">
       <h2>Profile</h2>
       <img src="images/avater.jpeg"/>
       <p>
@@ -30,17 +30,17 @@
         Webアプリケーションの作成について関心があります。<br/>
         また、サイクリングが趣味で、自然の中を気ままにサイクリングすることでリフレッシュしています。
       </p>
-    </section>
+    </div>
 
-    <section class="skills" id="skill">
+    <div class="skills" id="skill">
       <h2>Skill</h2>
       <ul>
         <li>HTML、CSS</li>
         <li>Ruby</li>
       </ul>
-    </section>
+    </div>
 
-    <section class="portfolio" id="portfolio">
+    <div class="portfolio" id="portfolio">
       <h2>Portfolio</h2>
       <div>
         <ul>
@@ -49,7 +49,7 @@
           <li><a href="#">GitHub リポジトリ</a></li>
         </ul>
       </div>
-    </section>
+    </div>
   </main>
 
   <footer>
